--- a/debian/rules
+++ b/debian/rules
@@ -7,15 +7,16 @@
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/default.mk
 
-YAS_INSTALL_DIR = $(CURDIR)/debian/usr/share/yasnippet-snippets 
+YAS_INSTALL_DIR = $(CURDIR)/debian/yasnippet-snippets/usr/share/yasnippet-snippets
 
 # main packaging script based on dh7 syntax
 %:
 	dh $@ 
 
-override_dh_auto_build:
+override_dh_auto_install:
 	mkdir -p $(YAS_INSTALL_DIR)
-	find -maxdepth 1 -type d ! -name debian ! -name ".*" | xargs cp -rt $(YAS_INSTALL_DIR)
+	find -maxdepth 1 -type d ! -name debian ! -name ".*" -print0 \
+	 | xargs -0 cp --verbose --recursive --target-directory="$(YAS_INSTALL_DIR)/"
 	find $(YAS_INSTALL_DIR) -type f -executable -exec chmod -x {} +
 
 override_dh_auto_clean:
