--- a/debian/rules
+++ b/debian/rules
@@ -3,24 +3,10 @@
 # output every command that modifies files on the build system.
 #DH_VERBOSE = 1
 
-# see EXAMPLES in dpkg-buildflags(1) and read /usr/share/dpkg/*
-DPKG_EXPORT_BUILDFLAGS = 1
-include /usr/share/dpkg/default.mk
-
-YAS_INSTALL_DIR = $(CURDIR)/debian/yasnippet-snippets/usr/share/yasnippet-snippets
-
-# main packaging script based on dh7 syntax
 %:
-	dh $@ 
+	dh $@ --parallel
 
-override_dh_auto_install:
-	mkdir -p $(YAS_INSTALL_DIR)
-	find -maxdepth 1 -type d ! -name debian ! -name ".*" -print0 \
-	 | xargs -0 cp --verbose --recursive --target-directory="$(YAS_INSTALL_DIR)/"
-	find $(YAS_INSTALL_DIR) -type f -executable -exec chmod -x {} +
-
-override_dh_auto_clean:
-	rm -rf $(YAS_INSTALL_DIR)
-
-
-
+override_dh_fixperms:
+	dh_fixperms
+	find debian/*/usr/share/yasnippet-snippets -type f -executable -print0 \
+	 | xargs -0 chmod --verbose -x
