Enhanced package description.

--- a/debian/control
+++ b/debian/control
@@ -11,5 +11,12 @@ Homepage: https://github.com/AndreaCrotti/yasnippet-snippets
 Package: yasnippet-snippets
 Architecture: all
 Depends: ${misc:Depends}
-Description: Andrea Crotti's yasnippet snippets
+Description: Andrea Crotti's official yasnippet snippets
+ YASnippet (yet another snippet extension for Emacs) is a template
+ system for Emacs. It allows you to type an abbrevation and
+ automatically expand the abbreviation into function templates.
+ .
+ Bundled language templates includes: C, C++, C#, Perl, Python, Ruby,
+ SQL, LaTeX, HTML, CSS and more.
+ .
  This repository contains the official snippets for yasnippet.
