--- a/debian/rules
+++ b/debian/rules
@@ -8,5 +8,4 @@
 
 override_dh_fixperms:
 	dh_fixperms
-	find debian/*/usr/share/yasnippet-snippets -type f -executable -print0 \
-	 | xargs -0 --no-run-if-empty chmod --verbose -x
+	find debian/*/usr/share/yasnippet-snippets -type f -executable -exec chmod --verbose -x '{}' +
